--- a/package.json
+++ b/package.json
@@ -49,7 +49,14 @@
       },
       "devDependencies": {
           "@types/node": "^20.10.0",
+          "@types/react": "^18.3.12",
+          "@types/react-dom": "^18.3.1",
           "@vitejs/plugin-react-swc": "^3.10.2",
+          "autoprefixer": "^10.4.20",
+          "postcss": "^8.5.0",
+          "tailwindcss": "^3.4.17",
+          "tailwindcss-animate": "^1.0.7",
+          "typescript": "^5.7.2",
           "vite": "6.3.5"
       },
       "scripts": {
