--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   {
       "name": "Sistema de Atendimento Clínico",
       "version": "0.1.0",
+      "type": "module",
       "private": true,
       "dependencies": {
           "@radix-ui/react-accordion": "^1.2.3",
