--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
   {
-      "name": "Sistema de Atendimento Clínico",
+      "name": "Health Sharp",
       "version": "0.1.0",
       "type": "module",
       "private": true,
