--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
       "type": "module",
       "private": true,
       "dependencies": {
+            "@google/genai": "^1.25.0",
+            "@google/generative-ai": "^0.24.1",
             "@radix-ui/react-accordion": "^1.2.3",
             "@radix-ui/react-alert-dialog": "^1.1.6",
             "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -30,7 +32,9 @@
             "@radix-ui/react-toggle": "^1.1.2",
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
+            "@types/aws-sdk": "^0.0.42",
             "@types/react-router-dom": "^5.3.3",
+            "aws-sdk": "^2.1692.0",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
