--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "name": "Health Sharp",
+      "name": "health-sharp",
       "version": "0.1.0",
       "type": "module",
       "private": true,
@@ -33,6 +33,7 @@
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
             "@types/aws-sdk": "^0.0.42",
+            "@types/papaparse": "^5.3.16",
             "@types/react-router-dom": "^5.3.3",
             "aws-sdk": "^2.1692.0",
             "class-variance-authority": "^0.7.1",
@@ -41,7 +42,9 @@
             "embla-carousel-react": "^8.6.0",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
+            "mongodb": "^6.20.0",
             "next-themes": "^0.4.6",
+            "papaparse": "^5.5.3",
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
